kind of fixed the side-nav on small displays (work in progress)

--- a/public/app.css
+++ b/public/app.css
@@ -35,9 +35,21 @@ nav a.button-collapse {
 }
 
 .side-nav-bottom {
-  position: fixed;
-  bottom: 120px;
   background-color: rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-height: 612px) {
+  .side-nav-bottom {
+    position: fixed;
+    bottom: 120px;
+  }
+}
+
+@media screen and (max-height: 611px) {
+  .darken-bottom {
+    width: 100%;
+    height: 64px;
+    background-color: rgba(0, 0, 0, 0.2);
+  }
 }
 
 .about-title {
@@ -50,8 +62,8 @@ nav a.button-collapse {
 }
 
 .about-text {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
   line-height: 24px !important;
